# Checkers

./: CMakeLists.txt  checkers3.cpp  gg.h  main.cpp  tests.cpp
